# apz-pzpi-21-3-tanasiichuk-vladyslav

./: README.md
Task1/: apz-pzpi-21-3-tanasiichuk-vladyslav-task1
Task2/: apz-pzpi-21-3-tanasiichuk-vladyslav-task2.txt
Task2/apz-pzpi-21-3-tanasiichuk-vladyslav-task2/: compose.yml  package-lock.json  package.json
Task2/apz-pzpi-21-3-tanasiichuk-vladyslav-task2/prisma/: schema.prisma
Task2/apz-pzpi-21-3-tanasiichuk-vladyslav-task2/src/: app.module.ts  main.ts
Task2/apz-pzpi-21-3-tanasiichuk-vladyslav-task2/src/admin/: admin.controller.ts  admin.service.ts
Task2/apz-pzpi-21-3-tanasiichuk-vladyslav-task2/src/analitycs/: analitycs.controller.ts  analitycs.service.ts
Task2/apz-pzpi-21-3-tanasiichuk-vladyslav-task2/src/animals/: animals.controller.ts  animals.module.ts  animals.service.ts
Task2/apz-pzpi-21-3-tanasiichuk-vladyslav-task2/src/animals-species/: animals-species.service.ts
Task2/apz-pzpi-21-3-tanasiichuk-vladyslav-task2/src/auth/: auth.controller.ts  auth.guard.ts  auth.service.ts
Task2/apz-pzpi-21-3-tanasiichuk-vladyslav-task2/src/devices/: devices.controller.ts  devices.service.ts
Task2/apz-pzpi-21-3-tanasiichuk-vladyslav-task2/src/metrics/: metrics.controller.ts  metrics.module.ts  (+1 more)
Task3/: apz-pzpi-21-3-tanasiichuk-vladyslav-task3.txt
Task3/apz-pzpi-21-3-tanasiichuk-vladyslav-task3/: Cargo.toml  settings.json
Task3/apz-pzpi-21-3-tanasiichuk-vladyslav-task3/src/: device_data.rs  main.rs  settings.rs
Task4/: apz-pzpi-21-3-tanasiichuk-vladyslav-task4.txt
Task4/apz-pzpi-21-3-tanasiichuk-vladyslav-task4/: package-lock.json  package.json
(+43 files in other folders)
